feat: add creator latest and videos endpoints (#6)
